Got rid of currentPath.get(currentPath.size() - 1) and replaced it with currentPath.getLast();